--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/fav.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>GitHub PR Analytics Dashboard | Measure Engineering Velocity & Cycle Time</title>
+  <meta name="description"
+    content="Generate detailed GitHub Pull Request analytics. Identify bottlenecks, track average time-to-merge (cycle time), and optimize code review distribution for TPMs and engineering leads.">
 </head>
 
 <body>
